--- a/SignalRTester/packages.config
+++ b/SignalRTester/packages.config
@@ -18,8 +18,8 @@
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net462" />
-  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
@@ -29,6 +29,7 @@
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net462" />
@@ -36,7 +37,6 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net462" />
   <package id="MongoDB.Bson" version="2.5.0" targetFramework="net462" />
   <package id="MongoDB.Driver" version="2.5.0" targetFramework="net462" />
-  <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="net462" />
   <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="net462" />
   <package id="NBuilder" version="5.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
